Sample deposit
